--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - cargo install cargo-kcov
   - cargo check --verbose
   - cargo test --verbose
-  - cargo kcov --verbose
+  #- cargo kcov --verbose
   - cargo build --verbose
 
 env:
@@ -25,6 +25,7 @@ env:
 addons:
   apt:
     packages:
+      #- kcov
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
